# redact-pii-python

./: .gitignore  LICENSE  MANIFEST.in  PYPI_SETUP.md  README.md  example.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
redactpii/: __init__.py  redactor.py  types.py
tests/: __init__.py  test_redactor.py
